# kojin

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
docs/: message-schema.json  plan.md
examples/: Cargo.toml  README.md
examples/docs/: agent.md  amqp-priority.md  basic.md  chord.md  dashboard.md  priority.md
examples/interop/: python_worker.py
examples/src/: producer.rs  producer_agent.rs  producer_amqp.rs  tasks.rs  worker.rs  worker_agent.rs  worker_amqp.rs
kojin/: Cargo.toml
kojin-agent/: Cargo.toml
kojin-agent/src/: concurrency.rs  helpers.rs  lib.rs  runner.rs  sdd.rs  task.rs
kojin-amqp/: Cargo.toml
kojin-amqp/src/: broker.rs  config.rs  lib.rs  topology.rs
kojin-core/: Cargo.toml
kojin-core/benches/: dispatch.rs  throughput.rs
kojin-core/src/: backoff.rs  broker.rs  canvas.rs  codec.rs  context.rs  cron.rs  error.rs  lib.rs  memory_broker.rs  memory_result_backend.rs  message.rs  queue_weight.rs  registry.rs  result_backend.rs  shutdown.rs  signature.rs  state.rs  task.rs  task_id.rs  worker.rs
kojin-core/src/middleware/: dedup.rs  metrics.rs  mod.rs  otel.rs  rate_limit.rs  tracing_mw.rs
kojin-core/tests/: middleware_pipeline.rs  worker_lifecycle.rs  workflow_chain.rs  workflow_chord.rs  workflow_group.rs
kojin-core/tests/helpers/: mod.rs
kojin-dashboard/: Cargo.toml
kojin-dashboard/src/: lib.rs  main.rs  routes.rs  state.rs  ui.html
kojin-macros/: Cargo.toml
kojin-macros/src/: codegen.rs  lib.rs  task_attr.rs
kojin-macros/tests/fail/: no_params.rs  no_params.stderr  not_async.rs  not_async.stderr  self_param.rs  self_param.stderr
kojin-macros/tests/pass/: basic_task.rs  custom_queue.rs  with_params.rs
kojin-postgres/: Cargo.toml
kojin-postgres/src/: lib.rs  result_backend.rs
kojin-redis/: Cargo.toml
kojin-redis/src/: broker.rs  config.rs  keys.rs  lib.rs  result_backend.rs  scripts.rs
kojin-sqs/: Cargo.toml
kojin-sqs/src/: broker.rs  config.rs  lib.rs
kojin/examples/: amqp.rs  basic.rs  cron.rs  dashboard.rs  observability.rs  sqs.rs  workflows.rs
kojin/src/: builder.rs  lib.rs
