[workspace]
members = [
    "kojin",
    "kojin-core",
    "kojin-macros",
    "kojin-redis",
    "kojin-postgres",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jiayun/kojin"
rust-version = "1.85"
authors = ["Jiayun <jiayun@users.noreply.github.com>"]
description = "Async distributed task queue for Rust"
homepage = "https://github.com/jiayun/kojin"
documentation = "https://docs.rs/kojin"
readme = "README.md"
keywords = ["task-queue", "async", "distributed", "background-jobs", "worker"]
categories = ["asynchronous", "concurrency"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
