[package]
name = "kojin-agent"
description = "AI agent orchestration for kojin — spawn Claude Code as distributed tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["ai-agent", "llm", "orchestration", "claude", "task-queue"]
categories = ["asynchronous", "concurrency"]

[dependencies]
kojin-core = { path = "../kojin-core", version = "0.4.0" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
