[package]
name = "kojin-amqp"
description = "RabbitMQ (AMQP) broker for the kojin task queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kojin-amqp"
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = []
integration-tests = []

[dependencies]
kojin-core = { path = "../kojin-core", version = "0.2.0" }
lapin = "4"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-lite = "2"
