[package]
name = "kojin-core"
description = "Core traits, types, and worker runtime for the kojin task queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kojin-core"
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = []
cron = ["dep:cron"]
rate-limit = ["dep:governor"]
otel = ["dep:opentelemetry"]
dedup = ["dep:dashmap"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
cron = { version = "0.15", optional = true }
governor = { version = "0.10", optional = true }
opentelemetry = { version = "0.31", optional = true }
dashmap = { version = "6", optional = true }

[dev-dependencies]
tracing-test = "0.2"
tracing-subscriber = "0.3"
