[package]
name = "kojin-dashboard"
description = "JSON API dashboard for monitoring the kojin task queue"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kojin-dashboard"
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
kojin-core = { path = "../kojin-core", version = "0.2.0" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
