[package]
name = "kojin"
description = "Async distributed task queue for Rust — like Celery, BullMQ, Sidekiq, but for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
kojin-core = { path = "../kojin-core", version = "0.1.0" }
kojin-macros = { path = "../kojin-macros", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = ["redis"]
redis = ["dep:kojin-redis"]

[dependencies.kojin-redis]
path = "../kojin-redis"
version = "0.1.0"
optional = true

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = "0.3"
